--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -1,118 +1,44 @@
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
+@import 'libs/skel';
 
 /*
-	Big Picture by HTML5 UP
-	html5up.net | @n33co
+	Twenty by HTML5 UP
+	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 /* Section/Article */
 
-	section > .last-child,
-	article > .last-child,
-	section.last-child,
-	article.last-child {
-		margin-bottom: 0;
-	}
-
-/* Form */
-
-	form {
-		input[type="text"],
-		input[type="email"],
-		input[type="password"],
-		select,
-		textarea {
-			position: relative;
-			-ms-behavior: url('assets/js/ie/PIE.htc');
-			border: solid 1px #ccc;
+	section,
+	article {
+		> .last-child,
+		&.last-child {
+			margin-bottom: 0;
 		}
 	}
 
-/* Button */
+/* Banner */
 
-	input[type="button"],
-	input[type="submit"],
-	input[type="reset"],
-	.button,
-	button {
-		position: relative;
-		-ms-behavior: url('assets/js/ie/PIE.htc');
-
-		&.down {
-			text-indent: 0;
-		}
-	}
-
-/* Intro */
-
-	#intro {
-		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
-		background: url('../../images/intro.jpg');
+	#banner {
+		background-image: url('../../images/banner.jpg');
+		background-repeat: no-repeat;
 		background-size: cover;
+		background-position: auto;
+		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
 
-		.content {
-			position: relative;
-			z-index: 1;
-		}
-
-		&:after {
-			content: '';
-			background: url('images/overlay.png');
-			width: 100%;
-			height: 100%;
-			position: absolute;
-			left: 0;
-			top: 0;
+		.inner {
+			background: _palette(banner, inner-bg);
 		}
 	}
 
-/* One */
+/* CTA  */
 
-	#one {
-		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
-		background: url('../../images/one.jpg');
+	#cta {
+		background-image: url('../../images/banner.jpg');
+		background-repeat: no-repeat;
 		background-size: cover;
-
-		.content {
-			position: relative;
-			z-index: 1;
-		}
-
-		&.left:before,
-		&.right:after {
-			content: '';
-			background: url('images/overlay.png');
-			width: 100%;
-			height: 100%;
-			position: absolute;
-			left: 0;
-			top: 0;
-		}
-	}
-
-/* Two */
-
-	#two {
+		background-position: auto;
 		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
-		background: url('../../images/two.jpg');
-		background-size: cover;
-
-		.content {
-			position: relative;
-			z-index: 1;
-		}
-
-		&.left:before,
-		&.right:after {
-			content: '';
-			background: url('images/overlay.png');
-			width: 100%;
-			height: 100%;
-			position: absolute;
-			left: 0;
-			top: 0;
-		}
 	}
