--- a/assets/sass/ie9.scss
+++ b/assets/sass/ie9.scss
@@ -1,24 +1,18 @@
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
+@import 'libs/skel';
 
 /*
-	Big Picture by HTML5 UP
-	html5up.net | @n33co
+	Twenty by HTML5 UP
+	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Loader */
+/* Banner */
 
-	body {
-		&:before,
-		&:after {
-			display: none !important;
+	#banner {
+		.inner {
+			opacity: 1.0;
 		}
-	}
-
-/* Poptrox */
-
-	.poptrox-popup .loader {
-		display: none !important;
 	}
